css/main.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400&display=swap');

*,::before,::after{
    box-sizing: border-box;
    
}
body{
    margin:0;
    font-family: fira sans , sans-serif;
}

.btn{
    box-shadow: none !important;
}
nav{
    background-color: #7C9473;
   
}
header{
    height: 70vh;
    background-color: #CFDAC8;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #7C9473;
}
header h1{
    font-weight: bold;
}
.shopping{
    /* background-color: #E8EAE6; */
}
div.item{
    min-width: 250px;
    width:350px;
    min-height:180px;
    /* line-height: 110px; */
    text-align: center;
    margin-right: 5px;
}

div.item.item-categories{
    min-width: 170px;
    min-height:120px;
    margin-right: 10px;
}

.horizontal-scroll{
    /* max-width: 1000px; */
    margin: auto;
}
.products{
    display: flex;
    /* border: 1px solid black; */
    overflow-x: auto;
    scroll-behavior: smooth;
}
.products::-webkit-scrollbar{
    width:0
    
}
.title{
    color: #7C9473;
}
.item-img > img{
    width: 100px;
    height: 100px;
    border-radius: 50%;
    object-fit: cover;
}
div.img-height , div.img-height img{
    height: 100%;
}

.btn-scroll-left {
    position: absolute;
    top: 25%;
    font-size: 2rem;
    left: -5%;
}
 .btn-scroll-right{
    position: absolute;
    top: 25%;
    font-size: 2rem;
    right:-5%;
}

.btn:focus{
   /* box-shadow: none; */
}

.story-container{
    transition: 0.5s all ease-out;
}

.item{
    cursor: pointer;
    transition: transform .2s;
}

.item:hover{
    transform: scale(1.05);
   
}
div.card{
    border:none;

}
div.button > a.edit , div.button > a.delete{
  width: 6.25rem;
  max-width: 100%;
}
p.description , h5.card-title{ 
        /* display: inline-block; */
        /* height: 70px; */
        white-space: nowrap;
        overflow: hidden !important;
        text-overflow: ellipsis;
    
}
div.img-height .btn-favorite{
    position: absolute;
    right: 0;
    top:0;
    z-index: 10;
}
.clickable{
    cursor: pointer;
}
.img-cart{
    width: 100%;
    height: 100%;
    object-fit: contain;
}
.container-img-cart{
    height:200px;
}
button.cart-remove{
    position:absolute ;
    bottom:0;
    right:0;
}
.cart-btns select{
    
    position: absolute;
    bottom: 7px;
    padding:0.25em;

}
#cart-num{
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    /* right: -4px; */
    left: 0.938rem;
    top: -1.25rem;
    background-color: #CFDAC8;
    color: #7C9473;
    border-radius: 50%;
    /* padding: 5px; */
    width: 1.563rem;
    height: 1.563rem;
    font-size:0.75rem;
}
@media screen and (max-width:500px) {
    html{
        font-size: 0.65rem;
    }
    div.item{
        min-width: 200px;
    }
  
}

@media screen and (max-width:800px){
    .btn-scroll-left {
       
        left: -7%;
    }
     .btn-scroll-right{
      
        right:-7%;
    }
}

